--- a/index.html
+++ b/index.html
@@ -25,5 +25,5 @@
     </div>
 </body>
 <footer>
-    <p>This is a KSU web design class project page, the class azure page can be found <a href="http://it5443.azurewebsites.net">here</a>.</p>
+    <p>This is a KSU web design class project page, the class azure page can be found <a href="http://it5443.azurewebsites.net" style="color:gold">here</a>.</p>
 </footer>
