--- a/projects.html
+++ b/projects.html
@@ -17,57 +17,23 @@
     </div>
     <br>
     <div class="pagecontent">
-        <h2></h2>
+        <h2>Current and Upcoming Projects</h2>
         <br>
-        <p></p>
+        <table style="margin-left: 20%;">
+            <caption style="font-size: 20px"><b>Current Projects</b></caption>
+            <tr><th>Efficient Management of School Databases and their Impact on Education</th></tr>
+            <tr><td><b>Principal Investigators:</b> Drs. Lei Li, Svetlana Peltsverger, Hossain Shahriar</td></tr>
+            <tr><td><b>Project Summary: Assessing the benefits of properly managing databases with regard to education systems and student personal information.</b></td></tr>
+        </table>
         <br>
-        <p></p>
+        <table style="margin-left: 20%; border-top: 1px solid black;">
+            <caption style="font-size: 20px"><b>Upcoming Projects</b></caption>
+            <tr><th>Cloud Substitution for Physical Databases</th></tr>
+            <tr><td><b>Principal Investigators:</b> Drs. Lei Li, Svetlana Peltsverger, Hossain Shahriar</td></tr>
+            <tr><td><b>Project Summary:</b> Evaluating the advantages and disadvantages of utilizing cloud storage in place of a physical database solution.</td></tr>
+        </table>
     </div>
 </body>
 <footer>
-    <p>This is a KSU web design class project page, the class azure page can be found <a href="http://it5443.azurewebsites.net">here</a>.</p>
+    <p>This is a KSU web design class project page, the class azure page can be found <a href="http://it5443.azurewebsites.net" style="color:gold">here</a>.</p>
 </footer>
-<style>
-    .pagenav {
-        display: block;
-        list-style-type: none;
-        margin-top: 8%;
-        margin-left: 75%;
-        padding: 0;
-        -moz-border-radius: 5px;
-        -webkit-border-radius: 5px;
-        border-radius: 6px;
-        width: 15%;
-        background-color: white;
-        position: absolute;
-        overflow: hidden;
-    }
-    .pagenav li {
-        display: block;
-    }
-    ul.list {
-        list-style-type: square;
-    }
-    li {
-        display: list-item;
-        width: 100%;
-    }
-    li button {
-        display: block;
-        color: black;
-        width: 100%;
-        padding: 8px 16px;
-        text-decoration: none;
-    }
-    li button.current {
-        background-color: #3e8e41;
-    }
-    li button:hover:not(.current) {
-        background-color: black;
-        color: white;
-    }
-    li.b {
-        display: block;
-        text-align: center;
-    }
-</style>
