Updated projects file

--- a/projects.html
+++ b/projects.html
@@ -19,14 +19,14 @@
     <div class="pagecontent">
         <h2>Current and Upcoming Projects</h2>
         <br>
-        <table style="margin-left: 20%;">
+        <table>
             <caption style="font-size: 20px"><b>Current Projects</b></caption>
             <tr><th>Efficient Management of School Databases and their Impact on Education</th></tr>
             <tr><td><b>Principal Investigators:</b> Drs. Lei Li, Svetlana Peltsverger, Hossain Shahriar</td></tr>
             <tr><td><b>Project Summary: Assessing the benefits of properly managing databases with regard to education systems and student personal information.</b></td></tr>
         </table>
         <br>
-        <table style="margin-left: 20%; border-top: 1px solid black;">
+        <table style="margin-left: 4%; border-top: 1px solid black;">
             <caption style="font-size: 20px"><b>Upcoming Projects</b></caption>
             <tr><th>Cloud Substitution for Physical Databases</th></tr>
             <tr><td><b>Principal Investigators:</b> Drs. Lei Li, Svetlana Peltsverger, Hossain Shahriar</td></tr>
