Made further corrections to the projects page

--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
             <caption style="font-size: 20px"><b>Current Projects</b></caption>
             <tr><th>Efficient Management of School Databases and their Impact on Education</th></tr>
             <tr><td><b>Principal Investigators:</b> Drs. Lei Li, Svetlana Peltsverger, Hossain Shahriar</td></tr>
-            <tr><td><b>Project Summary: Assessing the benefits of properly managing databases with regard to education systems and student personal information.</b></td></tr>
+            <tr><td><b>Project Summary:</b> Assessing the benefits of properly managing databases with regard to education systems and student personal information.</td></tr>
         </table>
         <br>
         <table style="margin-left: 4%; border-top: 1px solid black;">
